--- a/package.json
+++ b/package.json
@@ -11,8 +11,19 @@
     },
     "devDependencies": {
         "axios": "^0.25",
+        "cypress": "^13.6.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
+    },
+    "dependencies": {
+        "@babel/core": "^7.23.7",
+        "@babel/preset-env": "^7.23.8",
+        "@vue/compiler-sfc": "^3.4.14",
+        "babel-loader": "^9.1.3",
+        "sweetalert2": "^11.10.3",
+        "vue": "^3.4.14",
+        "vue-loader": "^17.3.1",
+        "vue-router": "^4.0.13"
     }
 }
